<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.test.themoviedb.SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/profileToolBar"
                android:background="@color/colorPrimary">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search"
                        android:textSize="20dp"
                        android:textStyle="bold|italic" />

                </RelativeLayout>


            </android.support.v7.widget.Toolbar>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <SearchView
                android:id="@+id/search_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:iconifiedByDefault="false"
                android:queryBackground="@color/white"
                android:queryHint="@string/search_here" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_marginTop="20dp"
                android:id="@+id/search_movie_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20dp"
               android:visibility="gone"
                android:text="@string/search_movie_error"/>

            <ListView
                android:id="@+id/list_of_movies"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></ListView>


        </LinearLayout>
    </LinearLayout>

    <include
        layout="@layout/navigation_bar" />
</android.support.constraint.ConstraintLayout>
