<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:carview="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    app:ignore="NamespaceTypo">

    <LinearLayout
        android:id="@+id/linLayout4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <include layout="@layout/snippet_top_backbar" />


    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="55dp"
        android:layout_below="@+id/linLayout4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <include layout="@layout/movie_info"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <include layout="@layout/buttom_menu"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_gravity="bottom"
                    android:background="@color/colorPrimary"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp">
                <TextView
                    android:id="@+id/similar_movies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/similar_movies"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold|italic" />

            </LinearLayout>
            <TextView
                android:id="@+id/similar_movies_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="16dp"
                android:visibility="gone"
                android:text="@string/similar_movies_error"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp">
                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:scrollbars="horizontal"
                    android:id="@+id/similar_movies_view">

                </android.support.v7.widget.RecyclerView>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp">
                <TextView
                    android:id="@+id/cast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/casts"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold|italic" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp">
                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:scrollbars="horizontal"
                    android:id="@+id/cast_view">
                </android.support.v7.widget.RecyclerView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp">
                <TextView
                    android:id="@+id/posters"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/posters"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold|italic" />

            </LinearLayout>
            <TextView
                android:id="@+id/posters_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="16dp"
                android:visibility="gone"
                android:text="@string/posters_error"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp">
                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:scrollbars="horizontal"
                    android:id="@+id/posters_view">
                </android.support.v7.widget.RecyclerView>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


        <include layout="@layout/navigation_bar" />

</RelativeLayout>
