<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:carview="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    app:ignore="NamespaceTypo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/cast_image"
                android:layout_width="60dp"
                android:layout_height="80dp"
                android:layout_gravity="top"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                app:srcCompat="@android:drawable/ic_menu_slideshow" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/user_single_image"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/cast_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="5dp"
                        android:text="@string/cast_name"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold|italic" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/cast_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="5dp"
                        android:text="@string/cast_gender"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/cast_birthday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="5dp"
                        android:text="@string/cast_birthday"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>




</RelativeLayout>